layout fix for presentations on mobile tweak about text

--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -42,3 +42,8 @@ a {
     color: #337ab7;
 }
 
+@media (max-width: 1199px) {
+    .embed-responsive {
+        margin-bottom: 10px !important;
+    }
+}
